--- a/html/index.1
+++ b/html/index.1
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toca do coelho teste</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <style>.logo-img {width: 180px; height: auto;}
-        .main-image{width: 855px; height: auto;} </style>
+    <style>
+        .logo-img {width: 180px; height: auto;}
+        .main-image{width: 855px; height: auto;} 
+        body{background-color: #E6A06A;}
+        </style>
+        
 </head>
 <body>
     <header class="bg-success text-white">
@@ -66,15 +69,15 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-lg-8 col-md-12 image-container" >
-                <img src="fachada.jpg" alt="Fachada" class="main-image rounded">
+                <img src="fachada.jpg" alt="Fachada" class="main-image">
             </div>
             <div class="col-lg-4 col-md-12 small-images">
                 <div class="row">
                     <div class="col-12 mb-3">
-                        <img src="patio.jpg" alt="Pátio" class="img-fluid rounded">
+                        <img src="patio.jpg" alt="Pátio" class="img-fluid">
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="escola.jpg" alt="Escola" class="img-fluid rounded">
+                        <img src="escola.jpg" alt="Escola" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -96,26 +99,65 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <img src="assistente (1).jpg" alt="Assistente" class="img-fluid rounded-circle">
+                <img src="assistente (1).jpg" alt="Assistente" class="img-fluid ">
             </div>
         </div>
     </div>
     
     <div class="container my-5">
-        <h2 class="manchete mb-4">Manchetes de destaques</h2>
-    
-        <div class="row mb-4">
-            <div class="col-md-6">
-                <img src="jornal1.jpg" alt="Jornal 1" class="img-fluid mb-3 rounded">
-                <h3>"A escola infantil Toca do Coelho se consolida como referência no setor ao adotar práticas inovadoras que garantem plena acessibilidade para todas as crianças. Com uma infraestrutura adaptada e projetos pedagógicos inclusivos, a instituição se destaca pela criação de um ambiente seguro e acolhedor, onde cada aluno, independentemente de suas necessidades, tem a oportunidade de aprender e se desenvolver com autonomia e igualdade."</h3>
+        <h2 class="mb-5">Manchetes de destaques</h2>
+        <div class="row align-items-center">
+            <div class="col-lg-3">
+                <img src="jornal1.jpg" alt="Jornal 1" class="img-fluid"  style="width:350px; height: auto;">
             </div>
-            <div class="col-md-6">
-                <img src="jornal2.jpg" alt="Jornal 2" class="img-fluid mb-3 rounded">
-                <h3>"A escola infantil Toca do Coelho tem se destacado no cenário educacional por sua abordagem inovadora, voltada para a inclusão e o desenvolvimento integral das crianças. Com décadas de experiência, a instituição se tornou referência em acessibilidade e ensino personalizado, sempre comprometida com a formação de um ambiente acolhedor e adaptado para todos os seus alunos.
-                </h3>
+            <div class="col-lg-9">
+                <p class="fs-3 lh-base lead">"A escola infantil Toca do Coelho se consolida como referência no setor ao adotar práticas inovadoras que garantem plena acessibilidade para todas as crianças. Com uma infraestrutura adaptada e projetos pedagógicos inclusivos, a instituição se destaca pela criação de um ambiente seguro e acolhedor, onde cada aluno, independentemente de suas necessidades, tem a oportunidade de aprender e se desenvolver com autonomia e igualdade."</p>
             </div>
         </div>
     </div>
 
+    <div class="container my-5">
+        <div class="row align-items-center">
+            <div class="col-lg-3">
+                <img src="jornal2.jpg" alt="Jornal 2" class="img-fluid"  style="width:350px; height: auto;">
+            </div>
+            <div class="col-lg-9">
+                <p class="fs-3 lh-base lead">"A escola infantil Toca do Coelho tem se destacado no cenário educacional por sua abordagem inovadora, voltada para a inclusão e o desenvolvimento integral das crianças. Com décadas de experiência, a instituição se tornou referência em acessibilidade e ensino personalizado, sempre comprometida com a formação de um ambiente acolhedor e adaptado para todos os seus alunos."
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer class="bg-success py-5 ">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4 my-3 px-5">
+                    <img src="icons8-google-maps-novo.svg" alt="loc2" width="30">
+                </div>
+                <div class="col-4 my-3 px-5">
+                    <img src="whatsapp-symbol-logo-svgrepo-com.svg" alt="zap2" width="30">
+                </div>
+                <div class="col-4 my-3 px-5">
+                    <img src="instagram-2-1-logo-svgrepo-com.svg" alt="insta2" width="30">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 px-5">
+                    <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400" target="_blank" rel="noopener noreferrer">
+                    <p>St. de Grandes Áreas Norte SHCGN 707 - Asa Norte, Brasília - DF, 70297-400</p>
+                    </a>
+                </div>
+                <div class="col-4 px-5">
+                    <a href="https://whatsapp.com" target="_blank" rel="noopener noreferrer"></a>
+                    <p>61 9 9999-9999</p>
+                </div>
+                <div class="col-4 px-5">
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"></a>
+                    <p>@tocadocoelho</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
 </html>
