--- a/html/index.1
+++ b/html/index.1
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         .logo-img {width: 180px; height: auto;}
-        .main-image{width: 855px; height: auto;} 
+        .main-image{width: 850px; height: auto;} 
         body{background-color: #E6A06A;}
         </style>
         
@@ -68,9 +68,10 @@
 
     <div class="container mt-5">
         <div class="row">
-            <div class="col-lg-8 col-md-12 image-container" >
-                <img src="fachada.jpg" alt="Fachada" class="main-image">
+            <div class="col-lg-8 col-md-12">
+                <img src="fachada.jpg" alt="Fachada" class="img-fluid main-image">
             </div>
+            
             <div class="col-lg-4 col-md-12 small-images">
                 <div class="row">
                     <div class="col-12 mb-3">
@@ -135,7 +136,9 @@
                     <img src="icons8-google-maps-novo.svg" alt="loc2" width="30">
                 </div>
                 <div class="col-4 my-3 px-5">
+                    <a href="https://www.whatsapp.com/" target="_blank" rel="noopener noreferrer">
                     <img src="whatsapp-symbol-logo-svgrepo-com.svg" alt="zap2" width="30">
+                    </a>
                 </div>
                 <div class="col-4 my-3 px-5">
                     <img src="instagram-2-1-logo-svgrepo-com.svg" alt="insta2" width="30">
@@ -148,8 +151,9 @@
                     </a>
                 </div>
                 <div class="col-4 px-5">
-                    <a href="https://whatsapp.com" target="_blank" rel="noopener noreferrer"></a>
+                    <a href="https://www.whatsapp.com/" target="_blank" rel="noopener noreferrer">
                     <p>61 9 9999-9999</p>
+                    </a>
                 </div>
                 <div class="col-4 px-5">
                     <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"></a>
